<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.pokequiz.question1">
    <LinearLayout
        android:id="@+id/activity_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/eevee"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            style="@style/questionText"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="18dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Option1"
                style="@style/optionButton"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Option2"
                style="@style/optionButton"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Option3"
                style="@style/optionButton"/>
            <RadioButton
                android:id="@+id/ans2_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Option4"
                style="@style/optionButton"/>
        </RadioGroup>
        <ImageView
            style="@style/pokeButton"
            android:src="@drawable/pokeball"
            android:onClick="submit2"/>
    </LinearLayout>
</ScrollView>
