<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.pokequiz.question1">
    <LinearLayout
        android:id="@+id/activity_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nincada"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            style="@style/questionText"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="18dp">
            <CheckBox
                android:id="@+id/stanler_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7Option1"
                style="@style/optionButton"/>
            <CheckBox
                android:id="@+id/shedinja_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7Option2"
                style="@style/optionButton"/>
            <CheckBox
                android:id="@+id/smeargle_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7Option3"
                style="@style/optionButton"/>
            <CheckBox
                android:id="@+id/ninjask_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question7Option4"
                style="@style/optionButton"/>
        </LinearLayout>
        <ImageView
            android:src="@drawable/pokeball"
            style="@style/pokeButton"
            android:onClick="submit7"/>
    </LinearLayout>
</ScrollView>