<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.pokequiz.question1">
    <LinearLayout
        android:id="@+id/activity_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flygon"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/questionText"
            android:text="@string/question1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="18dp">
            <CheckBox
                android:id="@+id/dragon_checkBox"
                style="@style/optionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option1"/>
            <CheckBox
                android:id="@+id/grass_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option2"
                style="@style/optionButton"/>
            <CheckBox
                android:id="@+id/ground_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option3"
                style="@style/optionButton"/>
            <CheckBox
                android:id="@+id/flying_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1Option4"
                style="@style/optionButton"/>
        </LinearLayout>
        <ImageView
            style="@style/pokeButton"
            android:src="@drawable/pokeball"
            android:onClick="submit1"/>
    </LinearLayout>
</ScrollView>