<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.pokequiz.question1">
    <LinearLayout
        android:id="@+id/activity_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ledyba"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:layout_gravity="center_horizontal"
            style="@style/questionText"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="18dp"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/question6Option1"
                style="@style/optionButton"
                android:onClick="nonans"/>
            <Button
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/question6Option2"
                style="@style/optionButton"
                android:onClick="nonans"/>
            <Button
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/question6Option3"
                style="@style/optionButton"
                android:onClick="nonans"/>
            <Button
                android:id="@+id/ans6_radioButton"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:text="@string/question6Option4"
                style="@style/optionButton"
                android:onClick="submit6"/>
        </LinearLayout>
        <ImageView
            style="@style/pokeButton"
            android:src="@drawable/pokeball"
            android:onClick="nonans"/>
    </LinearLayout>
</ScrollView>